--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,38 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  user-select: none;
 }
-body,html{
+
+body, html {
   min-height: 100vh;
   position: relative;
+  background-color: whitesmoke;
+}
+
+input:focus, textarea:focus {
+  box-shadow: 0 0 10px rgb(160, 160, 160) !important;
+  border: 1px solid #ced4da !important;
+}
+
+.btn:hover {
+  box-shadow: -2px -2px 5px 3px gray !important;
+}
+
+.btn:focus {
+  box-shadow: none !important;
+}
+
+.bg_color {
+  background-color: #7d304d !important;
+  border: none;
+}
+
+.fullWidthBtn {
+  width: 100%;
+  border: none;
+  background-color: #7d304d !important;
+  outline: none;
+  text-decoration: none;
 }
