--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,7 @@
-#footer{
+#footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     margin-bottom: -50px;
+    text-align: center;
 }
