--- a/src/components/ProductDetails/quantity.css
+++ b/src/components/ProductDetails/quantity.css
@@ -1,20 +1,11 @@
-.increment,.decrement{
-    padding: 0px 7px;
-    margin: 3px;
+.increment, .decrement {
+    margin: 8px;
     cursor: pointer;
-    border: 1px solid gray;
-    border-radius: 5px;
-    font-size: 20px;
+    color: #441e2c;
+    font-weight: bold;
+    font-size: 18px;
 }
-.increment{
-    /* border-left: none; */
-    margin-left: 0;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-}
-.decrement{
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    border-right: none;
-    margin-right: 0;
+
+.quan_div {
+    min-width: 100px;
 }
