Fix some issues

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@ input:focus, textarea:focus {
   outline: none;
   text-decoration: none;
 }
+.no_fav{
+  margin-top: 20%;
+  text-align: center;
+}
