--- a/src/components/ProductDetails/productDetails.css
+++ b/src/components/ProductDetails/productDetails.css
@@ -14,6 +14,10 @@
     text-decoration: none;
 }
 
+.prod_details {
+    padding: 15px;
+}
+
 @media screen and (max-width:500px) {
     .prod_details {
         display: flex;
